--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* Root Variables */
 :root {
@@ -38,6 +39,11 @@ html, body {
 /* SECTIONS */
 section {
     padding: 5rem 0;
+}
+
+/* FONT FAMILY */
+.serif {
+    font-family: 'Playfair Display', serif;
 }
 
 /* CONTAINER */
@@ -182,19 +188,19 @@ section {
 
 /******* MARGIN RIGHT *******/
 .pr-1 {
-    padding-top: .25rem;
+    padding-right: .25rem;
 }
 .pr-2 {
-    padding-top: .5rem;
+    padding-right: .5rem;
 }
 .pr-3 {
-    padding-top: 1rem;
+    padding-right: 1rem;
 }
 .pr-4 {
-    padding-top: 1.5rem;
+    padding-right: 1.5rem;
 }
 .pr-5 {
-    padding-top: 2rem;
+    padding-right: 2rem;
 }
 
 /******* MARGIN BOTTOM *******/
@@ -216,19 +222,19 @@ section {
 
 /******* MARGIN LEFT *******/
 .pl-1 {
-    padding-top: .25rem;
+    padding-left: .25rem;
 }
 .pl-2 {
-    padding-top: .5rem;
+    padding-left: .5rem;
 }
 .pl-3 {
-    padding-top: 1rem;
+    padding-left: 1rem;
 }
 .pl-4 {
-    padding-top: 1.5rem;
+    padding-left: 1.5rem;
 }
 .pl-5 {
-    padding-top: 2rem;
+    padding-left: 2rem;
 }
 
 /******* DISPLAY *******/
@@ -842,35 +848,68 @@ input {
     border-top-right-radius: 2.5rem;
 }
 
+/* BORDER RADIUS */
+.br-1 {
+    border-radius: .25rem;
+}
+.br-2 {
+    border-radius: .5rem;
+}
+.br-3 {
+    border-radius: .75rem;
+}
+.br-4 {
+    border-radius: 1rem;
+}
+.br-5 {
+    border-radius: 1.25rem;
+}
+.br-6 {
+    border-radius: 1.5rem;
+}
+.br-7 {
+    border-radius: 1.75rem;
+}
+.br-8 {
+    border-radius: 2rem;
+}
+.br-9 {
+    border-radius: 2.25rem;
+}
+.br-10 {
+    border-radius: 2.5rem;
+}
+
+
 /* BORDER RADIUS BOTTOM LEFT */
-.brtb-1 {
+.brbl-1 {
     border-bottom-left-radius: .25rem;
 }
-.brtb-2 {
+.brbl-2 {
     border-bottom-left-radius: .5rem;
 }
-.brtb-3 {
+.brbl-3 {
     border-bottom-left-radius: .75rem;
 }
-.brtb-4 {
+.brbl-4 {
     border-bottom-left-radius: 1rem;
 }
-.brtb-5 {
+.brbl-5 {
     border-bottom-left-radius: 1.25rem;
 }
-.brtb-6 {
+.brbl-6 {
     border-bottom-left-radius: 1.5rem;
 }
-.brtb-7 {
+.brbl-7 {
     border-bottom-left-radius: 1.75rem;
 }
-.brtb-8 {
+.brbl-8 {
     border-bottom-left-radius: 2rem;
 }
-.brtb-9 {
+.brbl-9 {
     border-bottom-left-radius: 2.25rem;
 }
-.brtb-10 {
+.brbl-10 {
     border-bottom-left-radius: 2.5rem;
 }
 
@@ -918,4 +957,8 @@ input {
     background-clip: border-box;
     box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
+}
+
+.img-crop {
+    object-fit: cover;
 }
