--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
     --color-gray: #F0F0F0;
     --color-secondary: #6c757d;
     --color-success: #28a745;
+    --color-sucess-light: #5AD17D;
     --color-danger: #dc3545;
     --color-warning: #ffc107;
     --color-info: #17a2b8;
@@ -15,9 +16,13 @@
     --color-white: #fff;
     --color-primary-low: #402C06;
     --color-dark: #212529;
+    --color-dark-light: #272b30;
+    --color-selected: rgba(132, 139, 200, 0.18);
     --container-width-lg: 82%;
     --container-width-md: 90%;
     --container-width-sm: 92%;
+    --box-shadow: 0 2rem 3rem var(--color-selected);
+
 }
 
 html, body {
@@ -34,11 +39,22 @@ html, body {
     text-decoration: none;
     color: var(--color-light);
     font-family: 'Work Sans', sans-serif;
+    scroll-behavior: smooth;
+}
+
+/* NonResiable */
+.non-resizable {
+    resize: none;
 }
 
 /* SECTIONS */
 section {
     padding: 5rem 0;
+}
+
+/* Select */
+option {
+    color: var(--color-muted);
 }
 
 /* FONT FAMILY */
@@ -70,6 +86,15 @@ section {
 .margin-5 {
     margin: 2rem;
 }
+
+.m-auto {
+    margin: auto;
+}
+
+.m-0auto {
+    margin: 0 auto;
+}
+
 /******* MARGIN TOP *******/
 .mt-1 {
     margin-top: .25rem;
@@ -265,6 +290,13 @@ section {
     flex-direction: row;
 }
 
+.flex-reverse {
+    flex-direction: column-reverse;
+}
+.flex-row-reverse {
+    flex-direction: row-reverse;
+}
+
 /* GAP */
 .gap-1 {
     gap: .25rem;
@@ -287,11 +319,11 @@ section {
     align-items: center;
 }
 
-.align-left {
+.align-start {
     align-items: flex-start;
 }
 
-.align-right {
+.align-end {
     align-items: flex-end;
 }
 
@@ -333,6 +365,14 @@ section {
 }
 .w-100 {
     width: 100%;
+}
+
+.vw-15 {
+    width: 15vw;
+}
+
+.vw-20 {
+    width: 20vw;
 }
 
 .vw-25 {
@@ -512,8 +552,15 @@ section {
 .bg-dark {
     background-color: var(--color-dark);
 }
+.bg-dark-light {
+    background-color: var(--color-dark-light);
+}
 .bg-gray {
     background-color: var(--color-gray);
+}
+
+.bg-none {
+    background: none;
 }
 
 
@@ -541,6 +588,13 @@ section {
     background-color: var(--color-primary);
     border-color: var(--color-primary);
 }
+
+.btn-white {
+    background-color: var(--color-white);
+    border-color: var(--color-white);
+    color: var(--color-dark);
+}
+
 .btn-secondary {
     background-color: var(--color-secondary);
     border-color: var(--color-secondary);
@@ -548,6 +602,10 @@ section {
 .btn-success {
     background-color: var(--color-success);
     border-color: var(--color-success);
+}
+.btn-success-light {
+    background-color: var(--color-sucess-light);
+    border-color: var(--color-sucess-light);
 }
 .btn-danger {
     background-color: var(--color-danger);
@@ -577,6 +635,10 @@ section {
     text-decoration: none;
 }
 
+.pointer {
+    cursor: pointer;
+}
+
 .btn:not(:disabled):not(.disabled) {
     cursor: pointer;
 }
@@ -594,6 +656,11 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%);
+}
+
+/* margin bottom first child */
+.mb-not-last:not(:last-child) {
+    margin-bottom: 1rem;
 }
 
 /* FONT WEIGHT */
@@ -725,13 +792,32 @@ section {
 .uselected::after {
     position: absolute;
     display: block;
-    left: 0;
     bottom: -.2rem;
+    left: 0;
     content: "";
     width: 100%;
     height: 2px;
+}
+
+.uselected-50::after {
+    width: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.uselected-primary::after{
     background-color: var(--color-primary);
 }
+.uselected-secondary::after{
+    background-color: var(--color-secondary);
+}
+.uselected-dark::after{
+    background-color: var(--color-dark);
+}
+.uselected-white::after{
+    background-color: var(--color-white);
+}
+
 
 /* INPUT */
 input {
@@ -746,6 +832,29 @@ input {
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
     outline: none;
+}
+.invalid-input {
+    border: 5px solid var(--color-danger);
+    border-radius: 0.25rem;
+}
+
+.input {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    outline: none;
+}
+
+/* PlaceHolder */
+.place-holder-white::placeholder {
+    color: var(--color-white);
 }
 
 /**************** BORDER RADIUS ****************/
@@ -782,6 +891,10 @@ input {
 
 .border-rounded {
     border-radius: 50%;
+}
+
+.border-box {
+    border-radius: 0px;
 }
 
 /* BORDER RADIUS TOP LEFT */
@@ -880,6 +993,18 @@ input {
     border-radius: 2.5rem;
 }
 
+/* BORDERS */
+.border-none {
+    border: none;
+}
+
+.after-1::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-primary);
+}
 
 /* BORDER RADIUS BOTTOM LEFT */
 .brbl-1 {
@@ -959,6 +1084,148 @@ input {
     border-radius: 16px;
 }
 
+.card-simple {
+    padding: 1rem;
+    position: relative;
+    /* display: flex; */
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+}
+
 .img-crop {
     object-fit: cover;
+}
+
+/* SCROLL BAR */
+.hidden-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.hidden {
+    display: none;
+}
+
+.scroll-bar-large::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+.scroll-bar::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+.scroll-bar::-webkit-scrollbar-track, .scroll-bar-large::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: rgba(0,0,0,0.1);
+}
+.scroll-bar::-webkit-scrollbar-thumb, .scroll-bar-large::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: var(--color-primary);
+}
+.scroll-bar::-webkit-scrollbar-thumb:hover,.scroll-bar-large ::-webkit-scrollbar-thumb:hover {
+    background: var(--color-primary);
+}
+.scroll-bar::-webkit-scrollbar-thumb:active, .scroll-bar-large::-webkit-scrollbar-thumb:active {
+    background: var(--color-primary);
+}
+
+.alert-primary {
+    color: var(--color-primary);
+    background-color: #ffe8be;
+    border-color: #ffe8be;
+}
+
+.alert-success {
+    color: var(--color-success);
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+.alert-danger {
+    color: var(--color-danger);
+    background-color: #f8d7da;
+    border-color: #f8d7da;
+}
+.alert-warning {
+    color: var(--color-warning);
+    background-color: #fff3cd;
+    border-color: #fff3cd;
+}
+.alert-info {
+    color: var(--color-info);
+    background-color: #d1ecf1;
+    border-color: #d1ecf1;
+}
+
+.alert {
+    position: relative;
+    padding: 1.25rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
+
+/* LINES */
+.text-scratch::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-danger);
+    transform: translateY(-50%);
+}
+
+.far-underline::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 40%;
+    height: 2.7px;
+    margin-top: 2rem;
+    background-color: var(--color-dark);
+    transform: translateY(-50%);
+}
+
+.far-underline-primary::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 18%;
+    height: 2.7px;
+    margin-top: 2.5rem;
+    background-color: var(--color-primary);
+    transform: translateY(-50%);
+}
+
+.list-hover {
+    cursor: pointer;
+    transition: .1s ease-in-out;
+}
+.list-hover:hover {
+    background-color: #f8f9fa1c;
+}
+
+.active i, .active h4 {
+    color: var(--color-sucess-light);
+}
+
+
+/* ONLY FOR THIS WEB */
+.__CART__PAYMENT__DETAILS {
+    width: 370px;
+}
+
+.product-info{
+    max-width:350px;
+}
+
+.__CART__DETELE__BUTTON {
+    width:150px; 
+    height:38px;
 }
