--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1230,3 +1230,26 @@ input {
     width:150px; 
     height:38px;
 }
+
+.__PRODUCTS__TABLE {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  .__PRODUCTS__TABLE td, .__PRODUCTS__TABLE th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  .__PRODUCTS__TABLE tr:nth-child(even){background-color: #f2f2f2;}
+  
+  .__PRODUCTS__TABLE tr:hover {background-color: #ddd;}
+  
+  .__PRODUCTS__TABLE th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
+  }
